--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^5.0.8"
-  }
+  },
+  "dependencies": {
+    "axios": "^1.6.7"
+  },
+  "proxy":"https://openapi.naver.com"
 }
